bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q7 (Optimized, ObjectId).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&explanation.optimized_logical_plan.to_string()"
---
DecodeObjectIds: columns=[offer, price, productLabel, rating1, rating2, revName, revTitle, review, reviewer, vendor, vendorTitle]
  Projection: productLabel, offer, price, vendor, vendorTitle, review, revTitle, reviewer, revName, rating1, rating2
    Left Join:
      Projection: lhs.productLabel AS productLabel, rhs.offer AS offer, rhs.price AS price, rhs.vendor AS vendor, rhs.vendorTitle AS vendorTitle, rhs.date AS date
        Left Join:
          SubqueryAlias: lhs
            QuadPattern: triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer17/Product801> <http://www.w3.org/2000/01/rdf-schema#label> ?productLabel]
          SubqueryAlias: rhs
            BasicGraphPattern: columns_to_decode=[date], filters=[EBV(GT(ENC_TF(date), Union 5:{date_time_type:0,value:63349516800.000000000000000000,offset:}))]
              QuadPattern: triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer17/Product801>]
              QuadPattern: triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price]
              QuadPattern: triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> ?vendor]
              QuadPattern: triple_pattern=[?vendor <http://www.w3.org/2000/01/rdf-schema#label> ?vendorTitle]
              QuadPattern: triple_pattern=[?vendor <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> <http://downlode.org/rdf/iso-3166/countries#DE>]
              QuadPattern: triple_pattern=[?offer <http://purl.org/dc/elements/1.1/publisher> ?vendor]
              QuadPattern: triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo> ?date]
      Projection: lhs.review AS review, lhs.reviewer AS reviewer, lhs.revName AS revName, lhs.revTitle AS revTitle, lhs.rating1 AS rating1, rhs.rating2 AS rating2
        Left Join: lhs.review = rhs.review
          SubqueryAlias: lhs
            Projection: lhs.review AS review, lhs.reviewer AS reviewer, lhs.revName AS revName, lhs.revTitle AS revTitle, rhs.rating1 AS rating1
              Left Join: lhs.review = rhs.review
                SubqueryAlias: lhs
                  BasicGraphPattern: 
                    QuadPattern: triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer17/Product801>]
                    QuadPattern: triple_pattern=[?review <http://purl.org/stuff/rev#reviewer> ?reviewer]
                    QuadPattern: triple_pattern=[?reviewer <http://xmlns.com/foaf/0.1/name> ?revName]
                    QuadPattern: triple_pattern=[?review <http://purl.org/dc/elements/1.1/title> ?revTitle]
                SubqueryAlias: rhs
                  QuadPattern: triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating1> ?rating1]
          SubqueryAlias: rhs
            QuadPattern: triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating2> ?rating2]
