bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q8 (Execution Plan).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(title@0) as title, ENC_PT(text@1) as text, ENC_PT(reviewDate@2) as reviewDate, ENC_PT(reviewer@3) as reviewer, ENC_PT(reviewerName@4) as reviewerName, ENC_PT(rating1@5) as rating1, ENC_PT(rating2@6) as rating2, ENC_PT(rating3@7) as rating3, ENC_PT(rating4@8) as rating4]
  SortExec: TopK(fetch=20), expr=[ENC_SORT(ENC_TF(ENC_PT(reviewDate@2))) DESC], preserve_partitioning=[false]
    HashJoinExec: mode=CollectLeft, join_type=Left, on=[(review@0, review@0)], projection=[title@1, text@2, reviewDate@3, reviewer@4, reviewerName@5, rating1@6, rating2@7, rating3@8, rating4@10]
      HashJoinExec: mode=CollectLeft, join_type=Left, on=[(review@0, review@0)], projection=[review@0, title@1, text@2, reviewDate@3, reviewer@4, reviewerName@5, rating1@6, rating2@7, rating3@9]
        HashJoinExec: mode=CollectLeft, join_type=Left, on=[(review@0, review@0)], projection=[review@0, title@1, text@2, reviewDate@3, reviewer@4, reviewerName@5, rating1@6, rating2@8]
          HashJoinExec: mode=CollectLeft, join_type=Left, on=[(review@0, review@0)], projection=[review@0, title@1, text@2, reviewDate@3, reviewer@4, reviewerName@5, rating1@7]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(reviewer@4, reviewer@0)], projection=[review@0, title@1, text@2, reviewDate@3, reviewer@4, reviewerName@6]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@0, review@0)], projection=[review@0, title@1, text@2, reviewDate@3, reviewer@5]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@0, review@0)], projection=[review@0, title@1, text@2, reviewDate@4]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@0, review@0)], projection=[review@0, title@1, text@3]
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@0, review@0)], projection=[review@0, title@2]
                      DataSourceExec: [GPOS] subject=?review, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor>, object=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer12/Product578>
                      DataSourceExec: [GPOS] subject=?review, predicate=<http://purl.org/dc/elements/1.1/title>, object=?title, additional_filters=[DynamicFilter [ Generation 2; review in (<object id range>) ]]
                    FilterExec: EBV(LANGMATCHES(ENC_TF(LANG(ENC_PT(text@1))), 2:{value:EN,language:}))
                      DataSourceExec: [GPOS] subject=?review, predicate=<http://purl.org/stuff/rev#text>, object=?text, additional_filters=[DynamicFilter [ Generation 2; review in (<object id range>) ]]
                  DataSourceExec: [GPOS] subject=?review, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewDate>, object=?reviewDate, additional_filters=[DynamicFilter [ Generation 2; review in (<object id range>) ], DynamicFilter [ Generation 1; Unknown true ]]
                DataSourceExec: [GPOS] subject=?review, predicate=<http://purl.org/stuff/rev#reviewer>, object=?reviewer, additional_filters=[DynamicFilter [ Generation 2; review in (<object id range>) ]]
              DataSourceExec: [GPOS] subject=?reviewer, predicate=<http://xmlns.com/foaf/0.1/name>, object=?reviewerName, additional_filters=[DynamicFilter [ Generation 2; reviewer in (<object id range>) ]]
            DataSourceExec: [GPOS] subject=?review, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating1>, object=?rating1
          DataSourceExec: [GPOS] subject=?review, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating2>, object=?rating2
        DataSourceExec: [GPOS] subject=?review, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating3>, object=?rating3
      DataSourceExec: [GPOS] subject=?review, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating4>, object=?rating4
