bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q8 (Execution Plan, Object ID).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(title@0) as title, ENC_PT(text@1) as text, ENC_PT(reviewDate@2) as reviewDate, ENC_PT(reviewer@3) as reviewer, ENC_PT(reviewerName@4) as reviewerName, ENC_PT(rating1@5) as rating1, ENC_PT(rating2@6) as rating2, ENC_PT(rating3@7) as rating3, ENC_PT(rating4@8) as rating4]
  SortExec: TopK(fetch=20), expr=[ENC_SORT(ENC_TF(ENC_PT(reviewDate@2))) DESC], preserve_partitioning=[false]
    HashJoinExec: mode=CollectLeft, join_type=Left, on=[(review@0, review@0)], projection=[title@1, text@2, reviewDate@3, reviewer@4, reviewerName@5, rating1@6, rating2@7, rating3@8, rating4@10]
      HashJoinExec: mode=CollectLeft, join_type=Left, on=[(review@0, review@0)], projection=[review@0, title@1, text@2, reviewDate@3, reviewer@4, reviewerName@5, rating1@6, rating2@7, rating3@9]
        HashJoinExec: mode=CollectLeft, join_type=Left, on=[(review@0, review@0)], projection=[review@0, title@1, text@2, reviewDate@3, reviewer@4, reviewerName@5, rating1@6, rating2@8]
          HashJoinExec: mode=CollectLeft, join_type=Left, on=[(review@0, review@0)], projection=[review@0, title@1, text@2, reviewDate@3, reviewer@4, reviewerName@5, rating1@7]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(reviewer@4, reviewer@0)], projection=[review@0, title@1, text@2, reviewDate@3, reviewer@4, reviewerName@6]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@0, review@0)], projection=[review@0, title@1, text@2, reviewDate@3, reviewer@5]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@0, review@0)], projection=[review@0, title@1, text@2, reviewDate@4]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@0, review@0)], projection=[review@0, title@1, text@3]
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@0, review@0)], projection=[review@0, title@2]
                      DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer12/Product578>], blank_node_mode=Variable
                      FilterExec: DynamicFilter [ review@0 >= 86999 AND review@0 <= 115511 AND review@0 IN (SET) ([86999, 87136, 87417, 94228, 94656, 101616, 104006, 105924, 108134, 108412, 110463, 110609, 113004, 113301, 113348, 113412, 115485, 115511]) ]
                        DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?review <http://purl.org/dc/elements/1.1/title> ?title], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ review@0 >= 86999 AND review@0 <= 115511 AND review@0 IN (SET) ([86999, 87136, 87417, 94228, 94656, 101616, 104006, 105924, 108134, 108412, 110463, 110609, 113004, 113301, 113348, 113412, 115485, 115511]) ]]
                    FilterExec: EBV(LANGMATCHES(ENC_TF(LANG(ENC_PT(text@1))), 2:{value:EN,language:}))
                      FilterExec: DynamicFilter [ review@0 >= 86999 AND review@0 <= 115511 AND review@0 IN (SET) ([86999, 87136, 87417, 94228, 94656, 101616, 104006, 105924, 108134, 108412, 110463, 110609, 113004, 113301, 113348, 113412, 115485, 115511]) ]
                        DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?review <http://purl.org/stuff/rev#text> ?text], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ review@0 >= 86999 AND review@0 <= 115511 AND review@0 IN (SET) ([86999, 87136, 87417, 94228, 94656, 101616, 104006, 105924, 108134, 108412, 110463, 110609, 113004, 113301, 113348, 113412, 115485, 115511]) ]]
                  FilterExec: DynamicFilter [ review@0 >= 87136 AND review@0 <= 113412 AND review@0 IN (SET) ([87136, 94228, 104006, 105924, 108412, 110609, 113004, 113301, 113412]) ]
                    DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewDate> ?reviewDate], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ review@0 >= 87136 AND review@0 <= 113412 AND review@0 IN (SET) ([87136, 94228, 104006, 105924, 108412, 110609, 113004, 113301, 113412]) ]]
                FilterExec: DynamicFilter [ review@0 >= 87136 AND review@0 <= 113412 AND review@0 IN (SET) ([87136, 110609, 104006, 108412, 113412, 105924, 113301, 94228, 113004]) ]
                  DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?review <http://purl.org/stuff/rev#reviewer> ?reviewer], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ review@0 >= 87136 AND review@0 <= 113412 AND review@0 IN (SET) ([87136, 110609, 104006, 108412, 113412, 105924, 113301, 94228, 113004]) ]]
              FilterExec: DynamicFilter [ reviewer@0 >= 87133 AND reviewer@0 <= 113401 AND reviewer@0 IN (SET) ([87133, 94217, 103999, 105908, 108395, 110593, 113003, 113293, 113401]) ]
                DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?reviewer <http://xmlns.com/foaf/0.1/name> ?reviewerName], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ reviewer@0 >= 87133 AND reviewer@0 <= 113401 AND reviewer@0 IN (SET) ([87133, 94217, 103999, 105908, 108395, 110593, 113003, 113293, 113401]) ]]
            DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating1> ?rating1], blank_node_mode=Variable
          DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating2> ?rating2], blank_node_mode=Variable
        DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating3> ?rating3], blank_node_mode=Variable
      DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating4> ?rating4], blank_node_mode=Variable
