bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q8 (Execution Plan, ObjectId).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
SortExec: TopK(fetch=20), expr=[AS_SORTABLE_BYTES(ENC_TF(reviewDate@2)) DESC], preserve_partitioning=[false]
  ProjectionExec: expr=[title@1 as title, text@2 as text, reviewDate@3 as reviewDate, reviewer@4 as reviewer, reviewerName@5 as reviewerName, rating1@6 as rating1, rating2@7 as rating2, rating3@8 as rating3, rating4@9 as rating4]
    DecodeObjectIdsExec: projections=[decode(review) as review, decode(title) as title, text, decode(reviewDate) as reviewDate, decode(reviewer) as reviewer, decode(reviewerName) as reviewerName, decode(rating1) as rating1, decode(rating2) as rating2, decode(rating3) as rating3, decode(rating4) as rating4]
      FilterExec: EBV(LANGMATCHES(ENC_TF(LANG(text@2)), 2:{value:EN,language:}))
        DecodeObjectIdsExec: projections=[review, title, decode(text) as text, reviewDate, reviewer, reviewerName, rating1, rating2, rating3, rating4]
          HashJoinExec: mode=CollectLeft, join_type=Left, on=[(review@0, review@0)], projection=[review@0, title@1, text@2, reviewDate@3, reviewer@4, reviewerName@5, rating1@6, rating2@7, rating3@8, rating4@10]
            HashJoinExec: mode=CollectLeft, join_type=Left, on=[(review@0, review@0)], projection=[review@0, title@1, text@2, reviewDate@3, reviewer@4, reviewerName@5, rating1@6, rating2@7, rating3@9]
              HashJoinExec: mode=CollectLeft, join_type=Left, on=[(review@0, review@0)], projection=[review@0, title@1, text@2, reviewDate@3, reviewer@4, reviewerName@5, rating1@6, rating2@8]
                HashJoinExec: mode=CollectLeft, join_type=Left, on=[(review@0, review@0)], projection=[review@0, title@1, text@2, reviewDate@3, reviewer@4, reviewerName@5, rating1@7]
                  ProjectionExec: expr=[review__oid@2 as review, title__oid@5 as title, text__oid@3 as text, reviewDate__oid@4 as reviewDate, reviewer__oid@0 as reviewer, reviewerName__oid@1 as reviewerName]
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review__oid@2, review__oid@0)], projection=[reviewer__oid@0, reviewerName__oid@1, review__oid@2, text__oid@3, reviewDate__oid@4, title__oid@6]
                      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review__oid@2, review__oid@0)], projection=[reviewer__oid@0, reviewerName__oid@1, review__oid@2, text__oid@3, reviewDate__oid@5]
                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review__oid@2, review__oid@0)], projection=[reviewer__oid@0, reviewerName__oid@1, review__oid@2, text__oid@4]
                          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review__oid@2, review__oid@0)], projection=[reviewer__oid@0, reviewerName__oid@1, review__oid@2]
                            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(reviewer__oid@0, reviewer__oid@1)], projection=[reviewer__oid@0, reviewerName__oid@1, review__oid@2]
                              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?reviewer <http://xmlns.com/foaf/0.1/name> ?reviewerName], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as reviewer__oid, object@3 as reviewerName__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 84984, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 84984 AND 84984 <= predicate_max@2, required_guarantees=[predicate in (84984)]
                              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://purl.org/stuff/rev#reviewer> ?reviewer], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as review__oid, object@3 as reviewer__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 84987 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 84987 AND 84987 <= predicate_max@2, required_guarantees=[predicate in (84987)]
                            ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer12/Product578>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as review__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 84986 AND object@3 = 19423 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 84986 AND 84986 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 19423 AND 19423 <= object_max@6, required_guarantees=[object in (19423), predicate in (84986)]
                          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://purl.org/stuff/rev#text> ?text], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as review__oid, object@3 as text__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 84990 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 84990 AND 84990 <= predicate_max@2, required_guarantees=[predicate in (84990)]
                        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewDate> ?reviewDate], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as review__oid, object@3 as reviewDate__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 84988 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 84988 AND 84988 <= predicate_max@2, required_guarantees=[predicate in (84988)]
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://purl.org/dc/elements/1.1/title> ?title], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as review__oid, object@3 as title__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 84989 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 84989 AND 84989 <= predicate_max@2, required_guarantees=[predicate in (84989)]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating1> ?rating1], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as review, object@3 as rating1], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 84993, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 84993 AND 84993 <= predicate_max@2, required_guarantees=[predicate in (84993)]
                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating2> ?rating2], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as review, object@3 as rating2], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 84991, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 84991 AND 84991 <= predicate_max@2, required_guarantees=[predicate in (84991)]
              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating3> ?rating3], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as review, object@3 as rating3], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 84992, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 84992 AND 84992 <= predicate_max@2, required_guarantees=[predicate in (84992)]
            ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating4> ?rating4], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as review, object@3 as rating4], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 84994, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 84994 AND 84994 <= predicate_max@2, required_guarantees=[predicate in (84994)]
